--- a/src/App.css
+++ b/src/App.css
@@ -37,19 +37,24 @@ header {
 }
 
 hr {
-  margin-bottom: 30px
+  margin-bottom: 20px
 }
 
 nav {
   display: flex;
   justify-content: space-evenly;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .link {
   text-decoration: none;
   font-family: 'Lato', sans-serif;
   font-size: 20px;
+  padding: 10px;
+}
+
+.active {
+  background-color: #272525;
 }
 
 .container {
