--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
 
 .content {
   min-height: calc(100vh - 100px);
+  margin-top: 220px;
 }
 
 header {
@@ -31,10 +32,6 @@ header {
   width: 100%;
 }
 
-.void {
-  width: 100px;
-  height: 80px;
-}
 
 hr {
   margin-bottom: 20px
@@ -55,6 +52,15 @@ nav {
 
 .active {
   background-color: #272525;
+}
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  background-color: #2e2d2d;
 }
 
 .container {
@@ -234,6 +240,20 @@ nav {
   text-decoration: underline;
 }
 
+.add-btn {
+  width: 100%;
+  margin-top: 20px;
+  font-size: 15px;
+  font-family: 'Lato', sans-serif;
+  padding: 10px 0;
+  background-color: #2e2d2d;
+  color: #E4E4E4;
+}
+
+.add-btn:hover {
+  background-color: #414040;
+}
+
 .shop-container {
   display: flex;
 }
@@ -253,6 +273,12 @@ nav {
   font-weight: 600;
   padding: 10px;
   margin-bottom: 10px;
+}
+
+.active-filter {
+  background-color: #2e2d2d;
+  color: #E4E4E4;
+  border: 1px solid #E4E4E4;
 }
 
 button {
@@ -320,7 +346,8 @@ button {
 @media all and (max-width: 800px) {
 
    .content {
-     min-height: calc(100vh - 80px);
+    min-height: calc(100vh - 80px);
+    margin-top: 250px;
    }
    
    .link {
@@ -402,11 +429,6 @@ button {
     height: 60px;
   }
 
-  .void {
-    width: 80px;
-    height: 60px;
-  }
-
   .store-name {
     font-size: 28px;
     margin-bottom: 10px;
@@ -419,6 +441,11 @@ button {
   .link {
     font-size: 16px;
   }
+
+  .content {
+   margin-top: 200px;
+  }
+  
 
   .homePage-text {
     font-size: 15px;
